dataset1235/2025-2/1379599236/users/400451609/executions/2110095464_3044199709.log
== SUBMISSION (2025-08-25 19:22:36)
-- CODE: 
from math import *

n = int(input("Qual o número de pessoas? "))

prob = 1 - ((factorial(365))/(factorial(365-n))) * (1/(factorial(365*n)))

print(round(prob,2))
-- EXECUTION TIME: 
0.0166667
-- TEST CASE 1:
---- input:
50
---- correct output:
97.04
---- user output:
Qual o número de pessoas? 1.0
-- TEST CASE 2:
---- input:
23
---- correct output:
50.73
---- user output:
Qual o número de pessoas? 1.0
-- TEST CASE 3:
---- input:
12
---- correct output:
16.7
---- user output:
Qual o número de pessoas? 1.0
-- TEST CASE 4:
---- input:
99
---- correct output:
100.0
---- user output:
Qual o número de pessoas? 1.0
-- TEST CASE 5:
---- input:
38
---- correct output:
86.41
---- user output:
Qual o número de pessoas? 1.0
-- TEST CASE 6:
---- input:
24
---- correct output:
53.83
---- user output:
Qual o número de pessoas? 1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:22:08)
-- CODE: 
from math import *

n = int(input("Qual o número de pessoas? "))

prob = 1 - (factorial(365))/(factorial(365-n)) * 1/(factorial(365*n))

print(round(prob,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
50
---- correct output:
97.04
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prob = 1 - (factorial(365))/(factorial(365-n)) * 1/(factorial(365*n))
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^~~~~~~~~~~~~~~~~~
OverflowError: int too large to convert to float
-- TEST CASE 2:
---- input:
23
---- correct output:
50.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prob = 1 - (factorial(365))/(factorial(365-n)) * 1/(factorial(365*n))
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^~~~~~~~~~~~~~~~~~
OverflowError: int too large to convert to float
-- TEST CASE 3:
---- input:
12
---- correct output:
16.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prob = 1 - (factorial(365))/(factorial(365-n)) * 1/(factorial(365*n))
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^~~~~~~~~~~~~~~~~~
OverflowError: int too large to convert to float
-- TEST CASE 4:
---- input:
99
---- correct output:
100.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prob = 1 - (factorial(365))/(factorial(365-n)) * 1/(factorial(365*n))
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^~~~~~~~~~~~~~~~~~
OverflowError: int too large to convert to float
-- TEST CASE 5:
---- input:
38
---- correct output:
86.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prob = 1 - (factorial(365))/(factorial(365-n)) * 1/(factorial(365*n))
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^~~~~~~~~~~~~~~~~~
OverflowError: int too large to convert to float
-- TEST CASE 6:
---- input:
24
---- correct output:
53.83
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prob = 1 - (factorial(365))/(factorial(365-n)) * 1/(factorial(365*n))
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^~~~~~~~~~~~~~~~~~
OverflowError: int too large to convert to float
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:30:41)
-- CODE: 
import math

n = int(input("Qual o número de pessoas? "))

prob_dif = math.factorial(365)/(math.factorial(365-n)* (365**n))
prob = (1 - prob_dif)*100

print(round(prob,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
50
---- correct output:
97.04
-- ERROR:
File "XXXX", line 8
    print(round(prob,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
23
---- correct output:
50.73
-- ERROR:
File "XXXX", line 8
    print(round(prob,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
12
---- correct output:
16.7
-- ERROR:
File "XXXX", line 8
    print(round(prob,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
99
---- correct output:
100.0
-- ERROR:
File "XXXX", line 8
    print(round(prob,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
38
---- correct output:
86.41
-- ERROR:
File "XXXX", line 8
    print(round(prob,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
24
---- correct output:
53.83
-- ERROR:
File "XXXX", line 8
    print(round(prob,2)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:21:06)
-- CODE: 
import math

n = int(input("Qual o número de pessoas? "))

prob = 1 - (math.factorial(365))/(math.factorial(365-n)) * 1/(math.factorial(365*n))

print(round(prob,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
50
---- correct output:
97.04
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prob = 1 - (math.factorial(365))/(math.factorial(365-n)) * 1/(math.factorial(365*n))
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^~~~~~~~~~~~~~~~~~~~~~~
OverflowError: int too large to convert to float
-- TEST CASE 2:
---- input:
23
---- correct output:
50.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prob = 1 - (math.factorial(365))/(math.factorial(365-n)) * 1/(math.factorial(365*n))
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^~~~~~~~~~~~~~~~~~~~~~~
OverflowError: int too large to convert to float
-- TEST CASE 3:
---- input:
12
---- correct output:
16.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prob = 1 - (math.factorial(365))/(math.factorial(365-n)) * 1/(math.factorial(365*n))
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^~~~~~~~~~~~~~~~~~~~~~~
OverflowError: int too large to convert to float
-- TEST CASE 4:
---- input:
99
---- correct output:
100.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prob = 1 - (math.factorial(365))/(math.factorial(365-n)) * 1/(math.factorial(365*n))
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^~~~~~~~~~~~~~~~~~~~~~~
OverflowError: int too large to convert to float
-- TEST CASE 5:
---- input:
38
---- correct output:
86.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prob = 1 - (math.factorial(365))/(math.factorial(365-n)) * 1/(math.factorial(365*n))
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^~~~~~~~~~~~~~~~~~~~~~~
OverflowError: int too large to convert to float
-- TEST CASE 6:
---- input:
24
---- correct output:
53.83
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prob = 1 - (math.factorial(365))/(math.factorial(365-n)) * 1/(math.factorial(365*n))
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^~~~~~~~~~~~~~~~~~~~~~~
OverflowError: int too large to convert to float
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:21:02)
-- CODE: 
import math

n = int(input("Qual o número de pessoas? "))

prob = 1 - (math.factorial(365))/(math.factorial(365-n)) * 1/(math.factorial(365*n))

print(round(prob, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
50
---- correct output:
97.04
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prob = 1 - (math.factorial(365))/(math.factorial(365-n)) * 1/(math.factorial(365*n))
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^~~~~~~~~~~~~~~~~~~~~~~
OverflowError: int too large to convert to float
-- TEST CASE 2:
---- input:
23
---- correct output:
50.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prob = 1 - (math.factorial(365))/(math.factorial(365-n)) * 1/(math.factorial(365*n))
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^~~~~~~~~~~~~~~~~~~~~~~
OverflowError: int too large to convert to float
-- TEST CASE 3:
---- input:
12
---- correct output:
16.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prob = 1 - (math.factorial(365))/(math.factorial(365-n)) * 1/(math.factorial(365*n))
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^~~~~~~~~~~~~~~~~~~~~~~
OverflowError: int too large to convert to float
-- TEST CASE 4:
---- input:
99
---- correct output:
100.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prob = 1 - (math.factorial(365))/(math.factorial(365-n)) * 1/(math.factorial(365*n))
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^~~~~~~~~~~~~~~~~~~~~~~
OverflowError: int too large to convert to float
-- TEST CASE 5:
---- input:
38
---- correct output:
86.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prob = 1 - (math.factorial(365))/(math.factorial(365-n)) * 1/(math.factorial(365*n))
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^~~~~~~~~~~~~~~~~~~~~~~
OverflowError: int too large to convert to float
-- TEST CASE 6:
---- input:
24
---- correct output:
53.83
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prob = 1 - (math.factorial(365))/(math.factorial(365-n)) * 1/(math.factorial(365*n))
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^~~~~~~~~~~~~~~~~~~~~~~
OverflowError: int too large to convert to float
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:23:58)
-- CODE: 
from math import *

n = int(input("Qual o número de pessoas? "))

prob = 1 - ((factorial(365))/(factorial(365-n))) * (1/(factorial(365*n)))

print(float(round(prob,2)))
-- EXECUTION TIME: 
0.02
-- TEST CASE 1:
---- input:
50
---- correct output:
97.04
---- user output:
Qual o número de pessoas? 1.0
-- TEST CASE 2:
---- input:
23
---- correct output:
50.73
---- user output:
Qual o número de pessoas? 1.0
-- TEST CASE 3:
---- input:
12
---- correct output:
16.7
---- user output:
Qual o número de pessoas? 1.0
-- TEST CASE 4:
---- input:
99
---- correct output:
100.0
---- user output:
Qual o número de pessoas? 1.0
-- TEST CASE 5:
---- input:
38
---- correct output:
86.41
---- user output:
Qual o número de pessoas? 1.0
-- TEST CASE 6:
---- input:
24
---- correct output:
53.83
---- user output:
Qual o número de pessoas? 1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:30:53)
-- CODE: 
import math

n = int(input("Qual o número de pessoas? "))

prob_dif = math.factorial(365)/(math.factorial(365-n)* (365**n))
prob = (1 - prob_dif)*100

print(round(prob,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
50
---- correct output:
97.04
---- user output:
Qual o número de pessoas? 97.04
-- TEST CASE 2:
---- input:
23
---- correct output:
50.73
---- user output:
Qual o número de pessoas? 50.73
-- TEST CASE 3:
---- input:
12
---- correct output:
16.7
---- user output:
Qual o número de pessoas? 16.7
-- TEST CASE 4:
---- input:
99
---- correct output:
100.0
---- user output:
Qual o número de pessoas? 100.0
-- TEST CASE 5:
---- input:
38
---- correct output:
86.41
---- user output:
Qual o número de pessoas? 86.41
-- TEST CASE 6:
---- input:
24
---- correct output:
53.83
---- user output:
Qual o número de pessoas? 53.83
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:21:05)
-- CODE: 
import math

n = int(input("Qual o número de pessoas? "))

prob = 1 - (math.factorial(365))/(math.factorial(365-n)) * 1/(math.factorial(365*n))

print(round(prob,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
50
---- correct output:
97.04
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prob = 1 - (math.factorial(365))/(math.factorial(365-n)) * 1/(math.factorial(365*n))
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^~~~~~~~~~~~~~~~~~~~~~~
OverflowError: int too large to convert to float
-- TEST CASE 2:
---- input:
23
---- correct output:
50.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prob = 1 - (math.factorial(365))/(math.factorial(365-n)) * 1/(math.factorial(365*n))
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^~~~~~~~~~~~~~~~~~~~~~~
OverflowError: int too large to convert to float
-- TEST CASE 3:
---- input:
12
---- correct output:
16.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prob = 1 - (math.factorial(365))/(math.factorial(365-n)) * 1/(math.factorial(365*n))
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^~~~~~~~~~~~~~~~~~~~~~~
OverflowError: int too large to convert to float
-- TEST CASE 4:
---- input:
99
---- correct output:
100.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prob = 1 - (math.factorial(365))/(math.factorial(365-n)) * 1/(math.factorial(365*n))
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^~~~~~~~~~~~~~~~~~~~~~~
OverflowError: int too large to convert to float
-- TEST CASE 5:
---- input:
38
---- correct output:
86.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prob = 1 - (math.factorial(365))/(math.factorial(365-n)) * 1/(math.factorial(365*n))
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^~~~~~~~~~~~~~~~~~~~~~~
OverflowError: int too large to convert to float
-- TEST CASE 6:
---- input:
24
---- correct output:
53.83
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prob = 1 - (math.factorial(365))/(math.factorial(365-n)) * 1/(math.factorial(365*n))
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^~~~~~~~~~~~~~~~~~~~~~~
OverflowError: int too large to convert to float
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
